--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-/* src/globals.css */
+/*globals.css */
 body {
   background-color: #f0f0f0; /* Light background */
   color: black; /* Black text */
